# three_wheel_robot_packages

aruco_node/src/: aruco_node.cpp
imu_node/: CMakeLists.txt  package.xml
imu_node/msg/: robot_info.msg
imu_node/src/: RTIMULib.ini  imu_node.cpp  imu_node.cpp.save
raspicam_node/: CMakeLists.txt  package.xml
raspicam_node/camera_info/: camerav2_1280x960.yaml  camerav2_640x480.yaml
raspicam_node/launch/: camerav2_1280x960.launch  camerav2_640x480.launch  pi_640x480.launch
raspicam_node/src/: RaspiCamControl.cpp  raspicam_node.cpp
three_wheel_robot/: CMakeLists.txt  README.md  all.launch  package.xml  pi.launch  run.launch
three_wheel_robot/msg/: Espeeds.msg  waypoints.msg
three_wheel_robot/scripts/: Master_Settings.py  Three_Wheel_Sim_World.py  User_Node.py  User_Single.py  Velocity_Controller_PI_Node.py  Wheel_Speed_Controller_Node.py  Wheel_Velocities.py  encoder_count.py  pi_pwm.py  three_wheel_KF.py
three_wheel_robot/scripts/KF_class/: Three_wheel_robot_system_1.py  kalman.py  kalman_settings_1.py
